# spore

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  INTERNALS.md  PROTOCOL.md  README.md
.github/workflows/: audit.yml  ci.yml
docs/: INTERNALS.md  README.md  internals.md
docs/plans/: README.md
src/: atomic.rs  availability.rs  cache.rs  capability.rs  config.rs  datetime.rs  discovery.rs  editors.rs  error.rs  jsonrpc.rs  lib.rs  logging.rs  paths.rs  self_update.rs  subprocess.rs  telemetry.rs  tokens.rs  transport.rs  types.rs
tests/: mock_mcp_server.sh  transport_integration.rs
tests/fixtures/: capability-registry-v1.example.json  capability-runtime-lease-v1.example.json
