[package]
name = "spore"
version = "0.2.1"
edition = "2024"
authors = ["William Newton"]
description = "Shared IPC primitives for the Basidiocarp ecosystem — tool discovery, JSON-RPC, and subprocess communication"
license = "MIT"
repository = "https://github.com/basidiocarp/spore"
readme = "README.md"
keywords = ["ipc", "mcp", "json-rpc", "tool-discovery", "basidiocarp"]
categories = ["development-tools"]

[lib]
name = "spore"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"

[dev-dependencies]
insta = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
