[package]
name = "spore"
version = "0.3.1"
edition = "2024"
authors = ["William Newton"]
description = "Shared infrastructure for the Basidiocarp ecosystem — tool discovery, JSON-RPC, subprocess communication, config loading, self-update, and platform paths"
license = "MIT"
repository = "https://github.com/basidiocarp/spore"
readme = "README.md"
keywords = ["ipc", "mcp", "json-rpc", "tool-discovery", "basidiocarp"]
categories = ["development-tools"]

[lib]
name = "spore"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "3"
which = "7"

[dev-dependencies]
insta = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
