[package]
name = "spore"
version = "0.4.11"
edition = "2024"
rust-version = "1.85"
authors = ["William Newton"]
description = "Shared infrastructure for the Basidiocarp ecosystem — tool discovery, JSON-RPC, subprocess communication, config loading, self-update, and platform paths"
license = "MIT"
repository = "https://github.com/basidiocarp/spore"
readme = "README.md"
keywords = ["ipc", "mcp", "json-rpc", "tool-discovery", "basidiocarp"]
categories = ["development-tools"]

[lib]
name = "spore"
path = "src/lib.rs"

[features]
default = ["logging", "http"]
logging = ["dep:tracing-subscriber"]
http = ["dep:ureq"]
otel = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
opentelemetry = { version = "0.31", default-features = false, features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "json"], optional = true }
ureq = { version = "3", default-features = false, features = ["rustls"], optional = true }
which = "8"

[dev-dependencies]
insta = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
